--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <input type="text" id="idNum" required>
             <label class="name" for="name">animal name</label>
             <input type="text" id="name" required>
-            <label class="diet" for="diet">what do they like to munch on?</label>
+            <label class="diet" for="diet">what do they eat?</label>
             <input type="text" id="diet" required>
             <label class="fun_fact"for="fact">fun fact</label>
             <input type="text" id="fact" required>
